# raijin

./: .env.example  .env.production.example  .env.staging.example  .gitignore  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml
backend/: .dockerignore  Dockerfile  alembic.ini  conftest.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260421_0001_initial_schema.py  20260421_0002_invoice_corrections.py  20260421_0003_email_sources.py  20260421_0004_mydata.py  20260421_0005_erp.py  20260421_0006_user_roles_extended.py  20260422_0007_cloud_drive.py  20260422_0008_notifications.py  20260424_0009_invoice_duplicate_candidates.py  20260424_0010_sprints_6_10_core.py  20260424_0011_finish_sprints_6_10.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/core/: audit.py  celery_client.py  config.py  database.py  logging.py  middleware.py  observability.py  permissions.py  rate_limit.py  security.py  security_headers.py  storage.py
backend/app/models/: __init__.py
backend/app/routers/: audit.py  auth.py  exports.py  integrations.py  invoices.py  me.py  metrics.py  notifications.py  portal.py  reports.py  saml.py  search.py  security.py  suppliers.py  users.py
backend/app/schemas/: auth.py  email_source.py  erp.py  invoice.py  mydata.py  user.py
backend/app/scripts/: seed_demo.py  smoke_connectors.py
backend/app/services/: auth.py  cloud_drive_source.py  email_delivery.py  email_source.py  erp_config.py  export.py  health.py  invoice.py  mydata_config.py  notification.py  oauth_google.py  oauth_microsoft.py  saml.py  security_management.py  user_management.py
backend/tests/: conftest.py  test_health.py  test_invoice_service.py  test_models.py  test_mydata_xml.py  test_saml.py  test_security.py  test_softone_mapper.py  test_storage.py
docs/: PRODUCTION.md  RUNBOOK.md  STAGING.md  notion-progress-2026-04-22-evening.md  notion-progress-2026-04-22.md
frontend/: Dockerfile  next.config.mjs  package-lock.json  package.json  (+3 more)
workers/: Dockerfile  pyproject.toml
workers/app/: celery_app.py
workers/app/core/: config.py  database.py  logging.py  observability.py  storage.py
workers/app/services/: azure_di.py  erp_export.py  gdrive_client.py  gdrive_ingest.py  gmail_client.py  gmail_ingest.py  graph_client.py  ingest.py  invoice_processor.py  mydata_submission.py  normalizer.py  notification.py  outlook_ingest.py
workers/app/services/erp/: __init__.py  base.py  epsilon_net.py  factory.py  softone.py
workers/app/services/mydata/: __init__.py  aade_direct.py  base.py  epsilon.py  factory.py  softone.py
workers/app/tasks/: __init__.py  email_sync.py  erp.py  google_sync.py  mydata.py  ocr.py
workers/tests/: test_celery_app.py  test_invoice_processor.py  test_normalizer.py  test_validator.py  test_validator_extended.py
(+114 files in other folders)
